--- a/doc/fr_FR/partie_2.asciidoc
+++ b/doc/fr_FR/partie_2.asciidoc
@@ -1,3 +1,4 @@
+
 [role="col-md-12 text-justify"]
 Dans cette partie nous allons entrer dans les détails, découpé chaque popover, et fournir toutes les informations pour utiliser toutes les possibilités du plugin
 
@@ -8,7 +9,7 @@ Dans cette partie nous allons entrer dans les détails, découpé chaque popover
 ==== Popover du Menu
 
 [role="col-md-4"]
-image::../images/popovemenu1.png[role="img-thumbnail"]
+image:../images/popovemenu1.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Le titre de ce popover indique les dimensions de la *barre de menu*. +
@@ -18,7 +19,7 @@ Le titre de ce popover indique les dimensions de la *barre de menu*. +
 {nbsp} +
 
 [role="col-md-4"]
-image::../images/popovemenu2.png[role="img-thumbnail"]
+image:../images/popovemenu2.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Ce sélecteur va permettre de définir de quel coté va être disposé la *barre de menu*, quatre choix possible : 'Haut','Bas','Gauche','Droite'. +
@@ -28,7 +29,7 @@ Ce sélecteur va permettre de définir de quel coté va être disposé la *barre
 {nbsp} +
 
 [role="col-md-4"]
-image::../images/popovemenu3.png[role="img-thumbnail"]
+image:../images/popovemenu3.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Ce sélecteur va permettre de définir la taille de la *barre de menu*.
@@ -46,7 +47,7 @@ en mode 'Gauche' et 'Droite' cela correspond à la Largeur. +
 {nbsp} +
 
 [role="col-md-4"]
-image::../images/popovemenu4.png[role="img-thumbnail"]
+image:../images/popovemenu4.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Nous avons ici un bouton et une entrée texte qui correspond au titre de la *barre de menu*, le bouton permet de faire apparaître/disparaître le texte configuré. +
@@ -56,7 +57,7 @@ Nous avons ici un bouton et une entrée texte qui correspond au titre de la *bar
 {nbsp} +
 
 [role="col-md-4"]
-image::../images/popovemenu5.png[role="img-thumbnail"]
+image:../images/popovemenu5.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Valider ou non l'affichage de la barre d'état. +
@@ -73,7 +74,7 @@ La barre d'état ne fournit qu'un link:http://getbootstrap.com/components/#bread
 {nbsp} +
 
 [role="col-md-4"]
-image::../images/popovemenu6.png[role="img-thumbnail"]
+image:../images/popovemenu6.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Permet de valider l'option Mono-Cadre ou Multi-Cadres, en Mono-Cadre les pages secondaires n'auront q'un cadre unique, en mode Multi-Cadres, vous pourrez en créer autant que vous voulez sur les pages secondaires. +
@@ -116,7 +117,7 @@ Configuration du style CSS voir <<popover_de_style,Popover de Style>>. +
 ==== Popover de Dimensions
 
 [role="col-md-4"]
-image::../images/dimpopover1.png[role="img-thumbnail"]
+image:../images/dimpopover1.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Le titre de ce popover fournit les dimensions du cadre principal. +
@@ -126,32 +127,35 @@ Le titre de ce popover fournit les dimensions du cadre principal. +
 {nbsp} +
 
 [role="col-md-4"]
-image::../images/dimpopover2.png[role="img-thumbnail"]
+image:../images/dimpopover2.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Permet de définir les dimensions de la page principale. +
 --
 
-[role="col-md-8 text-justify"]
+[role="col-md-12 text-justify"]
 --
 [icon="../images/tip.png"]
 [TIP]
 Les valeurs par défaut correspond à une tablette horizontale. +
 [label label-danger]#Attention:# Ne pas confondre page(ou fenêtre) principale et cadre principal. +
-
-{nbsp} +
 --
 
+[role="row"]
+{nbsp} +
+
 [role="col-md-4"]
-image::../images/dimpopover3.png[role="img-thumbnail"]
+image:../images/dimpopover3.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Permet de définir l'image de fond, les images proviennent de la catégorie par défaut du <<gestionnaire_d_8217_images,Gestionnaire d'images>>. +
-{nbsp} +
 --
 
+[role="row"]
+{nbsp} +
+
 [role="col-md-4"]
-image::../images/dimpopover4.png[role="img-thumbnail"]
+image:../images/dimpopover4.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 L'id du plan de la page principale du mode Design. +
@@ -162,28 +166,30 @@ L'id du plan de la page principale du mode Design. +
 [icon="../images/tip.png"]
 [TIP]
 En mode read-only par défaut, passer en <<mode_expert,mode expert>> pour le modifier. +
-
-{nbsp} +
 --
 
+[role="row"]
+{nbsp} +
+
 [role="col-md-4"]
-image::../images/dimpopover5.png[role="img-thumbnail"]
+image:../images/dimpopover5.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 L'id du plan du cadre principal du mode Design. +
 --
 
-[role="col-md-8 text-justify"]
+[role="col-md-12 text-justify"]
 --
 [icon="../images/tip.png"]
 [TIP]
 En mode read-only par défaut, passer en <<mode_expert,mode expert>> pour le modifier. +
-
-{nbsp} +
 --
 
+[role="row"]
+{nbsp} +
+
 [role="col-md-4"]
-image::../images/dimpopover6.png[role="img-thumbnail"]
+image:../images/dimpopover6.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Gestionnaires des Fonts, appuyez sur le bouton *Font(s)...* pour en ajouter une, appuyer sur le bouton *Sélection* pour en effacer une, le sélecteur défini celle qui sera appliqué à la page principale. +
@@ -194,12 +200,13 @@ Gestionnaires des Fonts, appuyez sur le bouton *Font(s)...* pour en ajouter une,
 [icon="../images/tip.png"]
 [TIP]
 Seul les Fonts du type *TrueType*(.ttf) et *Web Open Font*(.woff) sont acceptées. +
-
-{nbsp} +
 --
 
+[role="row"]
+{nbsp} +
+
 [role="col-md-4"]
-image::../images/dimpopover7.png[role="img-thumbnail"]
+image:../images/dimpopover7.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Valider permet de revenir au <<popover_du_menu,popover Menu>>. +
@@ -212,7 +219,7 @@ Valider permet de revenir au <<popover_du_menu,popover Menu>>. +
 ==== Popover de Boutons
 
 [role="col-md-4"]
-image::../images/boutonpopover1.png[role="img-thumbnail"]
+image:../images/boutonpopover1.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Permet de choisir le type d'affichage +
@@ -220,46 +227,54 @@ Permet de choisir le type d'affichage +
 * Boutons: link:http://getbootstrap.com/css/#buttons["Classique"].
 * Onglets: voir link:http://getbootstrap.com/css/#nav-tabs["Nav Tabs"].
 * Onglets: voir link:http://getbootstrap.com/css/#nav-pills["Nav Pills"]. +
-{nbsp} +
 -- 
 
+[role="row"]
+{nbsp} +
+
 [role="col-md-4"]
-image::../images/boutonpopover2.png[role="img-thumbnail"]
+image:../images/boutonpopover2.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 La taille des boutons. +
 --
 
-[role="col-md-8 text-justify"]
+[role="col-md-12 text-justify"]
 --
 [icon="../images/warning.png"]
 [WARNING]
 Ne s'applique pas aux Onglets ou Menus. 
-
-{nbsp} +
 --
- 
+
+[role="row"]
+{nbsp} +
+
 [role="col-md-4"]
-image::../images/boutonpopover3.png[role="img-thumbnail"]
+image:../images/boutonpopover3.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 La couleur du bouton Home. +
-{nbsp} +
 --
 
+[role="row"]
+{nbsp} +
+
 [role="col-md-4"]
-image::../images/boutonpopover4.png[role="img-thumbnail"]
+image:../images/boutonpopover4.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
-Passe en mode justifié^(1)^ pour les Onglets et Menus. +
+Passe en mode justifié^(1)(2)^ pour les Onglets et Menus. +
 ~(1) les boutons prendrons toute la taille de la *barre de menu*.~ +
-{nbsp} +
+~(2) fonctionnalité buggué pour l'instant, elle est désactivé.~
 --
+
+[role="row"]
+{nbsp} +
 
 [role="col-md-4"]
 --
-image::../images/boutonpopover5.png[role="img-thumbnail"]
-image::../images/menugroupé.png[role="img-thumbnail"] 
+image:../images/boutonpopover5.png[role="img-thumbnail"]
+image:../images/menugroupé.png[role="img-thumbnail"] 
 --
 [role="col-md-8 text-justify"]
 --
@@ -271,36 +286,43 @@ Permet d'utiliser le format groupé pour les boutons. +
 [icon="../images/warning.png"]
 [WARNING]
 Ne s'applique pas aux Onglets ou Menus. +
-
-{nbsp} +
 --
 
+[role="row"]
+{nbsp} +
+
 [role="col-md-4"]
-image::../images/boutonpopover6.png[role="img-thumbnail"]
+image:../images/boutonpopover6.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Permet de décaler les boutons sur la *barre de menu*. +
-{nbsp} +
 --
 
+[role="row"]
+{nbsp} +
+
 [role="col-md-4"]
-image::../images/boutonpopover7.png[role="img-thumbnail"]
+image:../images/boutonpopover7.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Le premier bouton permet d'<<ajoutedition,ajouter un bouton>>, le suivant d'éditer le bouton indiquer par le sélecteur. +
-{nbsp} +
 --
 
+[role="row"]
+{nbsp} +
+
 [role="col-md-4"]
-image::../images/boutonpopover8.png[role="img-thumbnail"]
+image:../images/boutonpopover8.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 permet de reclasser les boutons dans l'ordre que l'on veut. Il suffit de cliquer et glisser le bouton à l'emplacement désirer, cliquez sur *Valider* pour valider les modifications. +
-{nbsp} +
 --
 
+[role="row"]
+{nbsp} +
+
 [role="col-md-4"]
-image::../images/boutonpopover9.png[role="img-thumbnail"]
+image:../images/boutonpopover9.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Valider permet de revenir au <<popover_du_menu,popover Menu>>. +
@@ -335,31 +357,37 @@ Les IDs des plan sont en mode read-only par défaut, passer en <<mode_expert,mod
 ==== Popover de Style
 
 [role="col-md-4"]
-image::../images/stylepopover1.png[role="img-thumbnail"]
+image:../images/stylepopover1.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 La case à cocher sert à utiliser ces propres couleurs pour le texte et le fond si elle est cocher sinon les couleurs du profil *_Jeedom_*(TM) seront utilisées. +
-{nbsp} +
 --
 
+[role="row"]
+{nbsp} +
+
 [role="col-md-4"]
-image::../images/stylepopover2.png[role="img-thumbnail"]
+image:../images/stylepopover2.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Définit la configuration des bordures pour la *barre de menu* le cadre principale, la barre d'état et les pages secondaires. +
-{nbsp} +
 --
 
+[role="row"]
+{nbsp} +
+
 [role="col-md-4"]
-image::../images/stylepopover3.png[role="img-thumbnail"]
+image:../images/stylepopover3.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Définit la configuration de l'ombre pour la *barre de menu* le cadre principale, la barre d'état et les pages secondaires. +
-{nbsp} +
 --
 
+[role="row"]
+{nbsp} +
+
 [role="col-md-4"]
-image::../images/stylepopover4.png[role="img-thumbnail"]
+image:../images/stylepopover4.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Valider permet de revenir au <<popover_du_menu,popover Menu>>. +
@@ -371,49 +399,59 @@ Valider permet de revenir au <<popover_du_menu,popover Menu>>. +
 ==== Popover des Cadres
 
 [role="col-md-4"]
-image::../images/cadrepopover1.png[role="img-thumbnail"]
+image:../images/cadrepopover1.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Titre du cadre donnant les dimmensions du cadre. +
 image:../images/cadrelock.png[role="img-thumbnail"] permet de vérouiller/dévérouiller le cadre. +
 image:../images/cadretrash.png[role="img-thumbnail"] Permet de supprimer le cadre. +
-{nbsp} +
 --
 
+[role="row"]
+{nbsp} +
+
 [role="col-md-4"]
-image::../images/cadrepopover2.png[role="img-thumbnail"]
+image:../images/cadrepopover2.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Nous avons ici un bouton et une entrée texte qui correspond au titre du cadre, le bouton permet de faire apparaître/disparaître le texte configuré. +
-{nbsp} +
 --
 
+[role="row"]
+{nbsp} +
+
 [role="col-md-4"]
-image::../images/cadrepopover3.png[role="img-thumbnail"]
+image:../images/cadrepopover3.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Permet de définir la couleur utiliser pour le cadre, par défaut le selecteur est grisé, la couleur de la fenêtre principale est utilisée. +
-{nbsp} +
 --
 
+[role="row"]
+{nbsp} +
+
 [role="col-md-4"]
-image::../images/cadrepopover4.png[role="img-thumbnail"]
+image:../images/cadrepopover4.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Permet de choisir une des Fonts disponible. Voir <<popover_de_dimensions,Dimensions>>. +
-{nbsp} +
 --
 
+[role="row"]
+{nbsp} +
+
 [role="col-md-4"]
-image::../images/cadrepopover5.png[role="img-thumbnail"]
+image:../images/cadrepopover5.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Permet de choisir une image de fond. Voir <<gestionnaire_d_8217_images,Gestionnaire d'images>>. +
-{nbsp} +
 --
 
+[role="row"]
+{nbsp} +
+
 [role="col-md-4"]
-image::../images/cadrepopover6.png[role="img-thumbnail"]
+image:../images/cadrepopover6.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Permet de définir le niveau de profondeur du cadre celons les niveaux du mode Design +
@@ -424,12 +462,13 @@ Permet de définir le niveau de profondeur du cadre celons les niveaux du mode D
 [icon="../images/tip.png"]
 [TIP]
 En théorie il doit rester à -1, implémenter pour des options avancées futures.
-
-{nbsp} +
 --
 
+[role="row"]
+{nbsp} +
+
 [role="col-md-4"]
-image::../images/cadrepopover7.png[role="img-thumbnail"]
+image:../images/cadrepopover7.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Le premier bouton permet d'ajouter un ligne SVG, le deuxième permet d'éditer la ligne SVG sélectionner dans le sélecteur.
@@ -452,16 +491,21 @@ Lorsque une ligne SVG est sélectionnée, elle clignote.
 Pour éviter de nombreuse fausse manipulation, certain paramètres sont en lecture seule, mais il peut arriver que dans certaine situation on est besoin de les modifier manuellement. De plus le mode expert permet d’accéder à de nouvelles fonctionnalités. Une fois le mode expert validé vous pourrez modifier tous les IDs de plan. +
 --
 
+[role="row"]
+{nbsp} +
+
 [role="col-md-4"]
-image::../images/importer.png[role="img-thumbnail"]
+image:../images/importer.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Ces deux boutons comme leur nom l'indique permettent d'importer/exporter des thèmes. Pour l'instant cela ne fonctionne que pour la page principale, l'exportation des pages secondaires sera implémentée dans une version ultérieure,  Vous remarquerez l'extension _thm_, elle correspond à une page principale. +
-{nbsp} +
 --
 
+[role="row"]
+{nbsp} +
+
 [role="col-md-4"]
-image::../images/raz.png[role="img-thumbnail"]
+image:../images/raz.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
 Ce bouton est à utiliser avec précaution, il va vider la page sélectionnée de tout contenu. Il est utile dans certain cas de pouvoir réinitialiser une page. +
@@ -472,6 +516,7 @@ Ce bouton est à utiliser avec précaution, il va vider la page sélectionnée d
 [icon="../images/important.png"]
 [IMPORTANT]
 Toutes les données de la page seront effacées.
-
-{nbsp} +
 --
+
+[role="row"]
+{nbsp} +
