--- a/doc/fr_FR/partie_1.asciidoc
+++ b/doc/fr_FR/partie_1.asciidoc
@@ -16,7 +16,7 @@ Pour appréhender le plugin nous allons développer dans cette partie la créati
 * On configura un style avec une bordure et une ombre pour un rendu visuel.
 
 Nous allons commencer par créer un thème, cliquer sur image:ajout.png[role="img-thumbnail"] .Changeons le titre pour un message de bienvenue, remplacez dans le premier popover +Menu+ par +Bienvenue dans Notre Espace Domotique+. Le thème que nous désirons et pratiquement créer, ils nous restent plus qu'a configurer les <<ajoutedition,boutons>> et le <<popover_de_style,style>>. +
-Cliquez sur *Boutons* et appuyez sur image:plus.png[role="img-thumbnail"] pour créer un nouveau bouton. +
+Cliquez sur image:popovemenu8.png[role="img-thumbnail"] et appuyez sur image:plus.png[role="img-thumbnail"] pour créer un nouveau bouton. +
 --
 
 [role="col-md-4"]
@@ -64,7 +64,7 @@ image::démo1.png[role="img-thumbnail"]
 image:designboot.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
-Le but du plugin étant la création d'une structure pour le mode Design, nous allons aborder ici les deux boutons les plus importants du plugin. A cette étape de notre thème aucune page n'a encore été créée. Le bouton *Bootstrap* est grisé, ce chapite va vous montrer comment les créer et comment injecter le code de la page principale. +
+Le but du plugin étant la création d'une structure pour le mode Design, nous allons aborder ici les deux boutons les plus importants du plugin. A cette étape de notre thème aucune page n'a encore été créée, le bouton image:bbootstrap.png[role="img-thumbnail"] est grisé, ce chapite va vous montrer comment les créer et comment injecter le code de la page principale. +
 --
 
 [role="row"]
@@ -140,7 +140,7 @@ Les images qui serviront aux pages secondaires seront rajoutées avec le <<gesti
 
 [role="col-md-12 text-justify"]
 --
-Ce chapitre à pour but de montrer comment configurer une page secondaire, Le bouton *Ajouter* est grisé puisque nous sommes en configuration +mono-cadre+, la configuration +multi-cadres+ est identique sauf que vous pouvez créer autant de cadre que vous voulez. +
+Ce chapitre à pour but de montrer comment configurer une page secondaire, Le bouton image:bajouter.png[role="img-thumbnail"] est grisé puisque nous sommes en configuration +mono-cadre+, la configuration +multi-cadres+ est identique sauf que vous pouvez créer autant de cadre que vous voulez. +
 Nous nous occuperons d'abord des pièces, nous parlerons de la page *Général* par la suite puisque elle occupe un rôle à part. +
 Pour la suite du projet, nous allons établir les différents modules dans chaque pièce :
 
@@ -163,7 +163,7 @@ Commençons par sélectionner +Salon+ dans le sélecteur *Pages* +
 Si vous cliquez sur le cadre, un popover pour la configuration du cadre apparaît: +
  +
 Changeons +Titre+ par +Salon+, et sélectionnons l'image téléchargée avec le sélecteur *Image*.Pour le fonctionnement complet de ce popover voir <<popover_des_cadres,Popover des Cadres>>
-Il suffit de sauvegarder, et d'utiliser le bouton *Bootstrap* pour mettre à jour la page secondaire _Salon_ dans le mode Design, la dernière étape étant de placer les widgets dans le mode Design. Répetons ces étapes pour les deux autres pièces. +
+Il suffit de sauvegarder, et d'utiliser le bouton image:bbootstrap.png[role="img-thumbnail"] pour mettre à jour la page secondaire _Salon_ dans le mode Design, la dernière étape étant de placer les widgets dans le mode Design. Répetons ces étapes pour les deux autres pièces. +
 --
 
 [role="col-md-12 text-justify"]
@@ -171,7 +171,7 @@ Il suffit de sauvegarder, et d'utiliser le bouton *Bootstrap* pour mettre à jou
 {nbsp} +
 [icon="../images/tip.png"]
 [TIP]
-Vous pouvez très bien injecter le code avec le bouton *Bootstrap* sans sauvegarder, pour faire des test ou autre.
+Vous pouvez très bien injecter le code avec le bouton image:bbootstrap.png[role="img-thumbnail"] sans sauvegarder, pour faire des test ou autre.
 --
 
 [role="col-md-12 text-justify"]
