--- a/doc/fr_FR/partie_1.asciidoc
+++ b/doc/fr_FR/partie_1.asciidoc
@@ -39,7 +39,7 @@ Le deuxième bouton est plus simple entrez +Chambre+ dans le champ *Nom* et vali
 image:styledemo.png[role="img-thumbnail"]
 [role="col-md-8 text-justify"]
 --
-Maintenant que nos boutons sont créés, nous allons appliquer un style pour un meilleur rendu visuel, ici chacun fait ce qu'il veut, pour notre démo j'ai choist les paramètres ainsi : +
+Maintenant que nos boutons sont créés, nous allons appliquer un style pour un meilleur rendu visuel, ici chacun fait ce qu'il veut, pour notre démo j'ai choisi les paramètres suivant : +
 
 * Bordure : *Taille*: +5+, *Rayon*: +5+, *Style*: +groove+, *Couleur*: +Bleu+
 * Ombre : *Taille*: +10+, +10+, +10+, *Couleur*: +Bleu Clair+
