--- a/doc/en_US/partie_1.asciidoc
+++ b/doc/en_US/partie_1.asciidoc
@@ -3,6 +3,8 @@
 '''
 ==== Création
 
+[role="col-md-12 text-justify"]
+--
 To understand the plugin we will develop in this part a theme as simple as possible, using the least possible options. To begin, let's define the nature of our project:
 
 * We will adopt the horizontal size pad (default settings).
@@ -13,87 +15,149 @@ To understand the plugin we will develop in this part a theme as simple as possi
 * Single frame (default settings).
 * We configure style with a border and a shadow for rendering.
 
-We will start by creating a theme, click on image:ajout.png[]. Change the title to a welcome message, replace in the first popover +menu+ by +Welcome to Our Home automation space+. The theme that we want to create and practically, they we remain more than to configure <<ajoutedition,buttons>> and <<popover_de_style,style>>. +
-Click *Buttons* and press image:plus.png[] to create a new button. Our first button is a submenu, enter +Ground floor+ in the field Name and click submenu to display the sub-entries, click image:plus.png[] to add another sub-entry, fill each entry with *Living room* and *Kitchen* and validate our first button is created. The second button is simpler enter *Bedroom* in the field name and click OK. +
+We will start by creating a theme, click on image:ajout.png[role="img-thumbnail"]. Change the title to a welcome message, replace in the first popover +menu+ by +Welcome to Our Home automation space+. The theme that we want to create and practically, they we remain more than to configure <<ajoutedition,buttons>> and <<popover_de_style,style>>. +
+Click image:popovemenu8.png[role="img-thumbnail"] and press image:plus.png[role="img-thumbnail"] to create a new button. +
+--
+
+[role="col-md-4"]
+image:rdcbouton.png[role="img-thumbnail"]
+[role="col-md-8 text-justify"]
+Our first button is a submenu, enter +Ground floor+ in the field Name and click submenu to display the sub-entries, click image:plus.png[role="img-thumbnail"] to add another sub-entry, fill each entry with *Living room* and *Kitchen* and validate our first button is created.
+
+
+[role="row"]
+{nbsp} +
+
+[role="col-md-4"]
+image:chambrebouton.png[role="img-thumbnail"]
+[role="col-md-8 text-justify"]
+The second button is simpler enter *Bedroom* in the field name and click OK. +
  
-Maintenant que nos boutons sont créés, nous allons appliquer un style pour un meilleur rendu visuel, ici chacun fait ce qu'il veut, pour notre démo j'ai choist les paramètres ainsi :
+[role="row"]
+{nbsp} +
 
-* Bordure : *Taille*: +5+, *Rayon*: +5+, *Style*: +groove+, *Couleur*: +Bleu+
-* Ombre : *Taille*: +10+, +10+, +10+, *Couleur*: +Bleu Clair+
+[role="col-md-4"]
+image:styledemo.png[role="img-thumbnail"]
+[role="col-md-8 text-justify"]
+--
+Now that our buttons are created , we will apply a style for a better visual , here everyone does what he wants, for our demo I chose the following parameters :
 
-Sauvegardez votre thème maintenant. +
+* Border : *Size*: +5+, *Radius*: +5+, *Style*: +groove+, *Color*: +Blue+
+* Shadow : *Size*: +10+, +10+, +10+, *Color*: +Bleu Clair+
 
-Voici le résultat: +
+Save your theme now. +
+--
 
-image::démo1.png[]
+[role="col-md-12"]
+--
+You can see the result: +
+
+image::démo1.png[role="img-thumbnail"]
+
+[role="row"]
 {nbsp} +
 
 '''
-==== Design et Bootstrap
-Le but du plugin étant la création d'une structure pour le mode Design, nous allons aborder ici les deux boutons les plus importants du plugin: image:bdesign.png[] et image:bbootstrap.png[] +
+==== Design and Bootstrap
+
+[role="col-md-4"]
+image:designboot.png[role="img-thumbnail"]
+[role="col-md-8 text-justify"]
+--
+The purpose of the plugin is the creation of a structure for the Design mode, we will discuss here the two most important buttons of the plugin. At this stage of our theme no pages have been created yet, the button image:bbootstrap.png[role="img-thumbnail"] is disable, this chapter at will show you how to create and how to inject the code of the main page. +
+--
+
+[role="row"]
+{nbsp} +
 
 '''
 ===== Design
-Ce bouton va permettre de créer les pages du mode Design, la page principale au format du thème et les pages secondaires au format du cadre principal. A chaque fois que vous charger un thème le plugin vérifié que les pages sont créer, si toutes les pages existent le bouton sera grisé. On peut dégriser le bouton facilement il suffit de modifier la taille de la fenêtre principale. Le bouton est dégrisé aussi dés qu'on rajoute un bouton.
 
-image::planok.png[]
-image::plannotok.png[]
+[role="col-md-4"]
+image:planoknook.png[role="img-thumbnail"]
+[role="col-md-8 text-justify"]
+--
+This button will create the Design mode pages , the main page to the theme format and subpages to the main frame format. Each time you load a theme, plugin verified that the pages are created, if all pages are available the button will be disable. He can enable the button easily just change the size of the main window. The button is enable as soon as one adds a button.
+--
+
+[role="col-md-12 text-justify"]
+--
 {nbsp} +
-
 [icon="../images/important.png"]
 [IMPORTANT]
-Lors de la première utilisation, le plugin récupère les IDs des pages pour mettre à jour le thème, il faut absolument sauvegarder pour ne pas perdre les données.
+On first use, the plugin retrieves the IDs of pages to update the theme, it is essential to save immediatly to not lose data.
 
 [icon="../images/tip.png"]
 [TIP]
-Si le bouton est dégrisé c'est que des modifications ont été apportées au thème qui demande de mettre à jour les pages.
+If the button is enable, changes were made to the theme that requires updating pages.
+--
 
-{nbsp} +
+[role="col-md-4"]
+image:designok.png[role="img-thumbnail"]
+[role="col-md-8 text-justify"]
+--
+The result of the theme that we are developing: +
+You can see that the plugin creates an additional page, call +General+ corresponds to the secondary page button *home* that is the layout of your page design mode. +
+[label label-danger]#Important# * Remember to save your project.* +
+--
 
-Voici le résultat du thème que nous développons: +
-
-image::designok.png[]
-{nbsp} +
-
-Vous pouvez constatez que le plugin crée une page supplémentaire, appelez +Général+ elle correspond à la page secondaire du bouton *home* qui est la page de présentation de votre mode Design. +
-[label label-danger]#Important# *Pensez à sauvegarder votre projet.* +
+[role="row"]
 {nbsp} +
 
 '''
 ===== Bootstrap
-Arrivez à cette étape toutes les pages doivent être créées, ce bouton va permettre d'injecté le code dans la page principale pour pouvoir gérer tout votre Design, après toutes modifications il suffira de cliquez sur ce bouton pour mettre à jour la fenêtre principale. +
 
-image::bootstrapok.png[]
+[role="col-md-4"]
+image:bootstrapok.png[role="img-thumbnail"]
+[role="col-md-8 text-justify"]
+--
+Get to that stage all pages must be created, this button will allow injected code on the main page to manage all your design after all modifications, click on this button to update the main window. +
+--
+
+[role="col-md-12"]
+[role="text-justify"]
+--
 {nbsp} +
-
 [icon="../images/tip.png"]
 [TIP]
-Si la page de la fenêtre principale n'existe pas le bouton restera grisé, cliquez sur le bouton *Design* pour palier ce problème.
+If the page in the main window is no button is disable, click on the image:bdesign.png[role="img-thumbnail"] button to overcome this problem.
+--
 
+[role="row"]
 {nbsp} +
 
 '''
-==== Gestion des Pages Secondaires
-Le plugin devait s'arrêter à la création de la page principale, des pages secondaires et de l'injection du code Bootstrap sur la page principale, mais il est apparu important de pouvoir gérer les pages secondaires à partir du plugin pour pouvoir aussi en contrôler le fonctionnement. +
+==== Secondaries Pages management
+
+[role="col-md-4"]
+image:secondaires.png[role="img-thumbnail"]
+[role="col-md-8 text-justify"]
+--
+The plugin was to stop the creation of the main page, other pages and the injection of bootstrap code on the main page, but it appeared important to manage secondary pages from the plugin also able to control operation. +
 Les images qui serviront aux pages secondaires seront rajoutées avec le <<gestionnaire_d_8217_images,Gestionnaire d'images>>, pour notre thème elles seront au format de notre cadre principale et seront créés à l'aide du logiciel link:http://www.sweethome3d.com/fr/[SweetHome 3D] +
-
-image::secondaires.png[]
 {nbsp} +
+--
 
-Ce chapitre à pour but de montrer comment configurer une page secondaire, Le bouton *Ajouter* est grisé puisque nous sommes en configuration +mono-cadre+, la configuration +multi-cadres+ est identique sauf que vous pouvez créer autant de cadre que vous voulez. +
+[role="col-md-12 text-justify"]
+--
+Ce chapitre à pour but de montrer comment configurer une page secondaire, Le bouton image:bajouter.png[role="img-thumbnail"] est grisé puisque nous sommes en configuration +mono-cadre+, la configuration +multi-cadres+ est identique sauf que vous pouvez créer autant de cadre que vous voulez. +
 Nous nous occuperons d'abord des pièces, nous parlerons de la page *Général* par la suite puisque elle occupe un rôle à part. +
 Pour la suite du projet, nous allons établir les différents modules dans chaque pièce :
 
 * Salon: 1 capteur de présence, 1 lumière, 1 thermostat, Surveillance réseau
 * cuisine: 1 capteur de présence, 1 lumière
 * Chambre: 1 capteur de présence, 1 lumière, 1 thermostat
+--
+
+[role="row"]
+{nbsp} +
 
 '''
 ===== Les pièces
 Commençons par sélectionner +Salon+ dans le sélecteur *Pages* +
 Si vous cliquez sur le cadre, un popover pour la configuration du cadre apparaît: +
 
-image::popovercadre.png[]
+image::popovercadre.png[role="img-thumbnail"]
 {nbsp} +
 
 Changeons +Titre+ par +Salon+, et sélectionnons l'image téléchargée avec le sélecteur *Image*.Pour le fonctionnement complet de ce popover voir <<popover_des_cadres,Popover des Cadres>>
@@ -119,18 +183,18 @@ link:https://www.youtube.com/watch?v=6T9feK6wF1A&feature=youtu.be[Démo vidéo]
 ===== Page Home
 Cette page va servir de page d'accueil pour notre mode Design, elle permettra soit de centraliser des informations soit tout simplement afficher une image de votre maison en 3D, elle reste libre à votre imagination. Dans notre cas nous allons mettre divers informations :
 
-image::generaldemo.png[]
+image::generaldemo.png[role="img-thumbnail"]
 {nbsp} +
 
 '''
 ===== Les lignes SVG
-Bien qu'à cette étape votre Design soit fonctionnel, il m'est apparu intéressant de fournir un système qui permettrait de localiser dans la pièce ou est votre widget (ou virtuel, etc...), et c'est tout naturellement que j'ai mis en place les *lignes SVG*. A partir du <<popover_des_cadres,Popover des Cadres>>, cliquez sur image:plusb.png[] une nouvelle *ligne SVG* va apparaître en haut à droite de votre cadre et un nouveau popover est disponible.
+Bien qu'à cette étape votre Design soit fonctionnel, il m'est apparu intéressant de fournir un système qui permettrait de localiser dans la pièce ou est votre widget (ou virtuel, etc...), et c'est tout naturellement que j'ai mis en place les *lignes SVG*. A partir du <<popover_des_cadres,Popover des Cadres>>, cliquez sur image:plusb.png[role="img-thumbnail"] une nouvelle *ligne SVG* va apparaître en haut à droite de votre cadre et un nouveau popover est disponible.
 
-image::popoversvg.png[]
+image::popoversvg.png[role="img-thumbnail"]
 {nbsp} +
 
 Ce dernier popover va vous servir à déplacer la *ligne SVG* à l'endroit désiré, une ligne SVG est composée de quatre parties, un petit rectangle appelé +Début+, une ligne appelée +1er partie+, une ligne appelée +2eme partie+ et un dernier rectangle appelé +Fin+. +
-Le D-Pad va servir à déplacer la ligne, le bouton central à valider, image:trash.png[] en haut à droite du popover permet d'effacer la ligne SVG. Il suffit de sélectionner les parties de la ligne SVG que l'on veut déplacer et d'utiliser le D-Pad. Le dernier sélecteur sert à changer la couleur de la ligne SVG, elles correspondent aux différentes catégories de *_Jeedom_*(TM). +
+Le D-Pad va servir à déplacer la ligne, le bouton central à valider, image:trash.png[role="img-thumbnail"] en haut à droite du popover permet d'effacer la ligne SVG. Il suffit de sélectionner les parties de la ligne SVG que l'on veut déplacer et d'utiliser le D-Pad. Le dernier sélecteur sert à changer la couleur de la ligne SVG, elles correspondent aux différentes catégories de *_Jeedom_*(TM). +
 
 [icon="tip.png"]
 [TIP]
